*fix y-overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,10 @@
   font-family: "open-sans", sans-serif;
 }
 
+body, html {
+  overflow: hidden;
+}
+
 /*
   1. Use a more-intuitive box-sizing model.
 */
